--- a/medicalhouse/.env
+++ b/medicalhouse/.env
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=192.168.190.76
 DB_PORT=3306
 DB_DATABASE=medicalhouse
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=medicalhouse
+DB_PASSWORD=bee@12345
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
