--- a/medicalhouse/.env
+++ b/medicalhouse/.env
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=185.199.220.68
 DB_PORT=3306
-DB_DATABASE=medicalhouse
-DB_USERNAME=medicalhouse
-DB_PASSWORD=bee@12345
+DB_DATABASE=beewebap_medicalhouse
+DB_USERNAME=beewebap_medicaluser
+DB_PASSWORD=medicaluser@2002
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
