--- a/medicalhouse/.env
+++ b/medicalhouse/.env
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+NOTIFYLK_API_KEY=yn8zlPsJ9gPofDBvJOFo
+NOTIFYLK_USER_ID=29019
+NOTIFYLK_SENDER_ID=NotifyDEMO
